# quaternion-sequences

./: .gitignore  README  README.md  result.ilp  result.sol  wbo
rust/: Cargo.toml  collect_results.py  convert.sh  convert_hm.sh  convert_qhm.sh  countpairs.sh  driver.sh  driver_parallel.sh  driver_unoptimized.sh  gen_matching.sh  gen_seq.sh  job2.sh  job_convert.sh  job_driver.sh  job_driver_split.sh  job_join.sh  job_matching.sh  job_merge_specific.sh  job_pair_single_rowsum.sh  job_pairs_rowsum.sh  job_sort.sh  job_sort_simple.sh  job_sort_specific.sh  job_sort_split.sh  join_pairs.sh  matching-13.out  matching-16.out  matching-17.out  matching-18-1.out  matching-18-2.out  matching-18.out  matching-19-1.out  matching-19-2.out  matching-19-3.out  matching-19-4.out  matching-19-5.out  matching-19-6.out  matrices-14.out  matrices-15.out  matrices-16-1.out  (+27 more)
rust/results/: gen_seq.sh  sym2-to-16.out  sym3-to-16.out  will_amicable.out  will_cross_correlation.out  will_sym.out
rust/results/pqs/: 2.seq  5.seq  6.seq  8.seq  9.seq
rust/results/qs/: 6.seq
rust/results/ws/: 5.seq  6.seq  7.seq  8.seq
rust/results/wts/: 8.seq
rust/src/: find_naive.rs  find_optim.rs  find_williamson.rs  main.rs  sequence.rs  symmetries.rs  williamson.rs
rust/src/find/: find_naive.rs  find_optim.rs  find_unique.rs  find_williamson.rs  find_with_rowsum.rs  find_write.rs  mod.rs
rust/src/sequences/: equations.rs  equivalence.rs  fourier.rs  matching.rs  matrices.rs  matrix_equivalence.rs  mod.rs  mum.rs  product.rs  pseudo_bool.rs  rowsum.rs  sequence.rs  symmetries.rs  williamson.rs
(+388 files in other folders)
