[package] 
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
phf = { version = "0.11.1", features = ["macros"] }
lazy_static = "1.4.0"
dict = "0.1.5"
time = "0.3.21"
rayon = "1.7.0"
itertools = "0.10.5"
fftw = "0.8.0"
num-complex = "0.4.3"
memory-stats = "1.1.0"
petgraph = "0.6.3"
graph-canon = "0.1.4"
